# cs347

csci347/assignment1/: Makefile.am  ls.c
csci347/project1/: Makefile.am  configure.ac  list.c  list.h  ls.c
csci347/project1/tests/: ls_dasha
csci347/project2/: Makefile.am  Makefile.in  _find.c(1).swp  _find_exists(2).swo  _find_exists(2).swp  _list.c(2).swp  configure  configure.ac  find.c  find_exists  list.c  list.h  list.h.gch  ls.c  test.c  text_io.c  text_io.h
csci347/project2/autom4te.cache/: output.0  requests  traces.0  traces.1
csci347/project2/tests/: _ls_dasha(1).swp  find_exec  find_exists  find_type  ls_dash_a  ls_order
csci347/threaded_jacobi_itterator/: README  diff_check  jacobi_barrier_test  jacobi_run_tests  jacobi_run_tests_real  jacobi_speedup_test  makefile
csci347/threaded_jacobi_itterator/src/: barrier.c  barrier.h  diff_check.c  jacobi_iterator.c  matrix.c  matrix.h  options.c  options.h
